plugins {
    id 'java'
    id "java-test-fixtures"
    id 'org.springframework.boot' version '3.1.5'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
    id 'org.asciidoctor.jvm.convert' version '3.3.2'
}

allprojects {
    group = 'com.pawith'
    version = '0.0.1'
    sourceCompatibility = '17'

    repositories {
        mavenCentral()
    }

}

apply from: 'gradle/spring.gradle'
apply from: 'gradle/lombok.gradle'
apply from: 'gradle/test.gradle'
apply from: 'gradle/restdocs.gradle'
//apply from: 'gradle/jacoco.gradle'
apply from: 'gradle/fcm.gradle'
apply from: 'gradle/externallib.gradle'
apply from: 'gradle/querydsl.gradle'